...
                            ProgressView()
                                .progressViewStyle(.circular)
                        }
                    }
                )
            
                .navigationTitle("Characters")
                .alert("Something happened!", isPresented: .init(get: {
                    viewModel.showingAlert == .retry
                }, set: { _ in
                })) {
                    Button("Retry") {
                        Task{
...
                    Spacer()
                }
                .padding()
            }
        }
        .listStyle(.inset)
        .accessibilityIdentifier("characterList")
    }
}


struct CharacterListView_Previews: PreviewProvider {
    static var previews: some View {
...
